Closed
Bug 233094
Opened 22 years ago
Closed 22 years ago
[FIXr]input text doesn't appear in text box if text box is in floated cell
Categories
(Core :: Layout: Tables, defect, P2)
Core
Layout: Tables
Tracking
()
RESOLVED
FIXED
mozilla1.7final
People
(Reporter: james.d.baker, Assigned: bzbarsky)
References
()
Details
(Keywords: fixed1.7, testcase)
Attachments
(4 files)
|
143 bytes,
text/html
|
Details | |
|
443 bytes,
text/html
|
Details | |
|
436 bytes,
text/html
|
Details | |
|
2.82 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
chofmann
:
approval1.7+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6) Gecko/20040113
I have a page with a search (input) box in a table cell. This cell has a
background image which is set via CSS. When I click in the text box, the cursor
doesn't show up. I tried typing and I found that the text appeared to the left
over the top of a different cell.
Note: The URL may be taken down soon.
Reproducible: Always
Steps to Reproduce:
1. Goto page
2. Click in search box and type
3. Text appears up and to the left
Actual Results:
The text appeared in the wrong place, and over the top of everything else
Expected Results:
The text should have appeared in the input box
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Comment 2•22 years ago
|
||
roc, would misparented views cause this?
sure could.
| Assignee | ||
Comment 4•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Summary: input text doesn't appear in text box if text box is in cell with a background image → input text doesn't appear in text box if text box is in floated cell
| Assignee | ||
Comment 5•22 years ago
|
||
| Assignee | ||
Comment 6•22 years ago
|
||
The basic idea is that when we construct the pseudo cell we need to make it the
float containing block....
This is a little fragile, though -- there may be other codepaths that could
produce pseudo cells. It really would be better if we could keep track of this
in the frame constructor state somehow... perhaps mPseudoFrames could push the
floater block when it creates the anonymous table cell and pop it when
ProcessPseudoFrames is called or something? But that can introduce nesting
issues with other pushes....
| Assignee | ||
Updated•22 years ago
|
Assignee: nobody → bzbarsky
Status: UNCONFIRMED → ASSIGNED
| Assignee | ||
Updated•22 years ago
|
Component: Layout: Form Controls → Layout: Tables
OS: Windows XP → All
Priority: -- → P2
QA Contact: core.layout.form-controls → core.layout.tables
Hardware: PC → All
Summary: input text doesn't appear in text box if text box is in floated cell → [FIX]input text doesn't appear in text box if text box is in floated cell
Target Milestone: --- → mozilla1.7alpha
| Assignee | ||
Comment 7•22 years ago
|
||
Comment on attachment 140654 [details] [diff] [review]
This fixes all three testcases and the website
David, what do you think?
Attachment #140654 -
Flags: superreview?(dbaron)
Attachment #140654 -
Flags: review?(dbaron)
you rock
Comment on attachment 140654 [details] [diff] [review]
This fixes all three testcases and the website
I'm not crazy about any of the table pseudo frame construction code, and I
don't remember my previous objection to this patch, but r+sr=dbaron.
Attachment #140654 -
Flags: superreview?(dbaron)
Attachment #140654 -
Flags: superreview+
Attachment #140654 -
Flags: review?(dbaron)
Attachment #140654 -
Flags: review+
| Assignee | ||
Comment 10•22 years ago
|
||
> I'm not crazy about any of the table pseudo frame construction code
I'm not either.... I have some ideas on nuking all of it and replacing it with
something sane, but they're not to the point where I can coherently describe
them yet...
Summary: [FIX]input text doesn't appear in text box if text box is in floated cell → [FIXr]input text doesn't appear in text box if text box is in floated cell
Target Milestone: mozilla1.7alpha → mozilla1.8alpha
| Assignee | ||
Comment 11•22 years ago
|
||
Checked in for 1.8a trunk.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
It might be worth requesting 1.7 approval for this.
| Assignee | ||
Comment 13•22 years ago
|
||
Comment on attachment 140654 [details] [diff] [review]
This fixes all three testcases and the website
Hmm.. yeah, this fixes issues with all sorts of sites, and should be reasonably
safe. I've been running with this patch for a while now, with no ill effects
that I have seen.
Attachment #140654 -
Flags: approval1.7?
Comment 14•22 years ago
|
||
Comment on attachment 140654 [details] [diff] [review]
This fixes all three testcases and the website
a=chofmann 1.7
Attachment #140654 -
Flags: approval1.7? → approval1.7+
| Assignee | ||
Comment 15•22 years ago
|
||
Checked in on the branch.
Keywords: fixed1.7
Target Milestone: mozilla1.8alpha → mozilla1.7final
Comment 16•22 years ago
|
||
*** Bug 218672 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 17•22 years ago
|
||
*** Bug 242101 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 18•21 years ago
|
||
Note: this caused crash bug 263846.
You need to log in
before you can comment on or make changes to this bug.
Description
•