When we push a pseudo cell frame, the block inside it needs to become the float containing block.  Otherwise, floats inside this cellframe get very confused. Bug 233094 and various dependencies, r+sr=dbaron